# python-pyqt-password-saver

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml  requirements.txt  storage.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-test.yml  code-quality.yml  release.yml  security.yml
password_saver/: __init__.py  main.py  storage.py
tests/: __init__.py  conftest.py  test_main.py  test_storage.py
ui/: mainwindow.ui
