[project]
name = "python-pyqt-password-saver"
version = "0.1.0"
description = "A cross-platform desktop password saver application using PyQt6"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["password", "manager", "pyqt6", "encryption", "security"]
authors = [
    {name = "PyQt Password Saver Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

dependencies = [
    "PyQt6>=6.6.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.6.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-xvfb>=3.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
]

[project.scripts]
password-saver = "password_saver.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["password_saver"]

[tool.setuptools.package-data]
password_saver = ["ui/*.ui"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["build/", "dist/", "\\.eggs/", ".*\\.egg-info/"]

[[tool.mypy.overrides]]
module = "password_saver.main"
disable_error_code = ["attr-defined"]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
recursive = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "C0301",  # line-too-long (handled by black)
    "R0902",  # too-many-instance-attributes
    "R0914",  # too-many-locals
    "R1702",  # too-many-nested-blocks
    "C0302",  # too-many-lines
    "W0201",  # attribute-defined-outside-init
    "W0718",  # broad-exception-caught
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "app", "ui"]

[tool.pylint.typecheck]
# Ignore PyQt6 import errors (common false positives)
ignored-modules = ["PyQt6", "PyQt6.QtCore", "PyQt6.QtWidgets", "PyQt6.QtGui"]

[tool.bandit]
exclude_dirs = ["/tmp", "tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["password_saver"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
